vlib/v/checker/tests/enum_field_value_overflow.vv
enum Color {
	red
	green = 2147483648
	blue
}
